# actions-workflow

./: 404.html  Cargo.toml  README.md  generate.sh  graphql.config.yaml  index.html
.cargo/: config.toml
.github/workflows/: shuttle.yaml  web.yaml
assets/: Authorized-B93ANu3E.js  Authorized-BKb56Mxx.js  Authorized-BWghtfPZ.js  Authorized-C4yE_iUO.js  Authorized-C6jQzIrV.js  Authorized-CA-wW6Lw.js  Authorized-D1tD8z3u.js  Authorized-DBI1KW7g.js  Authorized-efLaUBSd.js  Category-1bKOjcHh.js  Category-BR3ArTLe.js  Category-BvxK5HYd.js  Category-BxXbwu3C.js  Category-CMJip9Ep.js  Category-CbmH0RX2.js  Category-CorP9slO.js  Category-DXzN0dj5.js  Category-Dp59a0fg.js  CreateModal-3EqOPA66.js  CreateModal-B2LSBWb8.js  CreateModal-CK9GJsca.js  CreateModal-CfvlTCi1.js  CreateModal-CogAjReq.js  CreateModal-Dwf7kVkq.js  CreateModal-Dz8PeBrv.js  CreateModal-kK_SSoUh.js  CreateModal-zOj-S9NC.js  Favorite-BOeQLKyA.js  Favorite-BRcyLO9b.js  Favorite-CFBiguWn.js  Favorite-CKmgFuk5.js  Favorite-CuZ2O2xw.js  Favorite-D4rGmwHx.js  Favorite-DDSQ__-P.js  Favorite-Dh9FPgn4.js  Favorite-DtSa9Dno.js  Home-5ZKr9buw.js  Home-B1jI7yGs.js  Home-B2BnpM1o.js  Home-BuyEcWYd.js  (+168 more)
migration/: Cargo.toml  category.json  tag.json
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240321_123520_category.rs  m20240321_123642_template.rs  m20240321_123757_comments.rs  m20240321_123845_favortes.rs  (+2 more)
src/: app_state.rs  error.rs  jwt.rs  lib.rs  main.rs  redis_keys.rs
src/auth/: handler.rs  (+2 more)
web/: codegen.ts  genColor.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+71 files in other folders)
